--- a/ex0404/src/main/webapp/WEB-INF/web.xml
+++ b/ex0404/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+<!-- Spring 3버전 MVC프로젝트 -->
 	<!-- The definition of the Root Spring Container shared by all Servlets 
 		and Filters -->
 	<context-param>
